[package]
name = "swapping"
version = "3.0.0"
description = "Swapping Demo"
authors = ["Tung Hoang <hoangtung.cse@gmail.com>"]
repository = "https://github.com/tunghm0812/swapping-solana.git"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.6"
enum_dispatch = "0.3.7"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.14.10"
spl-math = { version = "0.1", features = [ "no-entrypoint" ] }
spl-token = { version = "3.5", features = [ "no-entrypoint" ] }
thiserror = "1.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
roots = { version = "0.0.7", optional = true }
borsh = "0.9.3"

[dev-dependencies]
proptest = "1.0"
roots = "0.0.7"
solana-sdk = "1.14.10"
solana-program-test = "1.14.10"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
